--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Registration form</string>
+    <string name="app_name">Lists</string>
+    <string-array name="students">
+        <item>Meisam</item>
+        <item>Sarah</item>
+        <item>Brad</item>
+        <item>Madeline</item>
+        <item>Tom</item>
+    </string-array>
 </resources>
