--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,4 @@
 <resources>
-    <string name="app_name">Lists</string>
-    <string-array name="students">
-        <item>Meisam</item>
-        <item>Sarah</item>
-        <item>Brad</item>
-        <item>Madeline</item>
-        <item>Tom</item>
-    </string-array>
+    <string name="app_name">Different XML Files</string>
+    <string name="hello">Hello</string>
 </resources>
