--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">RecyclerView Example</string>
-    <string name="hello">Hello</string>
+    <string name="app_name">Challenge</string>
 </resources>
